--- a/apps/messages-service/package.json
+++ b/apps/messages-service/package.json
@@ -13,12 +13,14 @@
     "@apollo/server": "^4.11.0",
     "@apollo/subgraph": "^2.0.0",
     "@graphql-tools/schema": "^10.0.6",
+    "@temporalio/client": "^1.11.2",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-tag": "^2.12.6",
     "graphql-ws": "^5.16.0",
+    "uuid": "^10.0.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
