--- a/packages/activities/package.json
+++ b/packages/activities/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "@repo/durable-functions",
+  "name": "@repo/activities",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
-    "@temporalio/workflow": "^1.11.2",
-    "@repo/common": "*"
+    "@ai-sdk/openai": "^0.0.65",
+    "@repo/common": "*",
+    "@temporalio/activity": "^1.11.2",
+    "ai": "^3.4.8"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "eslint": "^8.57.0",
-    "typescript": "^5.3.3",
-    "@repo/activities": "*"
+    "typescript": "^5.3.3"
   }
 }
