--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "ui": "tui",
+  "globalEnv": ["APOLLO_KEY", "APOLLO_GRAPH_REF", "OPENAI_API_KEY"],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
