move both codegen to common

--- a/packages/common/codegen.yml
+++ b/packages/common/codegen.yml
@@ -1,6 +1,6 @@
 schema: http://localhost:4000
 generates:
-  src/generated/graphql.ts:
+  src/generated/supergraph-types.ts:
     plugins:
       - typescript
       - typescript-resolvers
