--- a/apps/messages-service/package.json
+++ b/apps/messages-service/package.json
@@ -6,8 +6,7 @@
     "dev": "ts-node-dev src/index.ts",
     "build": "tsc --build",
     "start": "node dist/index.js",
-    "lint": "eslint . --max-warnings 0",
-    "generate": "graphql-codegen"
+    "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
     "@apollo/server": "^4.11.0",
@@ -24,10 +23,7 @@
     "graphql-ws": "^5.16.0",
     "path": "^0.12.7",
     "uuid": "^10.0.0",
-    "ws": "^8.18.0",
-    "@graphql-codegen/cli": "^5.0.2",
-    "@graphql-codegen/typescript": "^4.0.9",
-    "@graphql-codegen/typescript-resolvers": "^4.2.1"
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "ts-node-dev": "^2.0.0"
